fix(FEV-1198): increased line-height to avoid scrollbars (#30)

--- a/src/components/quiz-question/open-question/open-question.scss
+++ b/src/components/quiz-question/open-question/open-question.scss
@@ -9,6 +9,7 @@
   .questionText {
     @include ivq-text;
     font-weight: bold;
+    line-height: 21px;
     flex-shrink: 0;
     overflow-wrap: break-word;
   }
