--- a/src/components/quiz-question/true-false/true-false.scss
+++ b/src/components/quiz-question/true-false/true-false.scss
@@ -10,6 +10,7 @@
     @include ivq-text;
     flex-shrink: 0;
     font-weight: bold;
+    line-height: 21px;
     overflow-wrap: break-word;
   }
   .optionalAnswersWrapper {
